--- a/categories.html
+++ b/categories.html
@@ -16,7 +16,7 @@
         <div class="d-c-category-list">
             #categoriesPage(pageSize=20)
                 #for(category: categoriesPage.data)
-                    <a class="d-c-category" href="/category/#(category.slug)">
+                    <a class="d-c-category" href="#(category.url)">
                         <div class="d-c-category-msg">
                             <span class="d-c-category-name">
                                 <i class="fa-regular fa-folder-open"></i>
