--- a/inc/postItem.html
+++ b/inc/postItem.html
@@ -9,7 +9,7 @@
         #if(article.isTop == 1)
             <span class="layui-badge d-post-top">置顶</span>
         #end
-        <a class="d-post-title" href="/article/#(article.slug)">
+        <a class="d-post-title" href="#(article.url)">
             #(article.title)
         </a>
         <div class="d-post-content">
