--- a/archive.html
+++ b/archive.html
@@ -21,7 +21,7 @@
                         <ul>
                             #for(archiveArticle: archive.articles??)
                                 <li class="d-timeline-title wow fadeInUp" data-wow-duration="#(for.count * 0.2)s">
-                                    <a href="/article/#(archiveArticle.slug)"><span class="d-timeline-time">#date(archiveArticle.createTime, "MM/dd")</span>#(archiveArticle.title)</a>
+                                    <a href="#(archiveArticle.url)"><span class="d-timeline-time">#date(archiveArticle.createTime, "MM/dd")</span>#(archiveArticle.title)</a>
                                 </li>
                             #end
                         </ul>
